--- a/src/main/resources/logback.properties
+++ b/src/main/resources/logback.properties
@@ -1,9 +1,9 @@
 #http://logback.qos.ch/manual/configuration.html
-#<include resource="includedConfig.xml"/>  resource, file, url (被包含的文件需要满足一定格式)
+#<include resource="includedConfig.mapper"/>  resource, file, url (被包含的文件需要满足一定格式)
 
-context.name=j-im-server-demo
+context.name=mao-im-server-demo
 
-log.dir=/logs/j-im-server-demo
+log.dir=/logs/mao-im-server-demo
 
 rolling.policy.file.name.pattern=yyyy-MM-dd
 max.file.size=100MB
